configs/iptables
# Generated by iptables-save v1.4.3.1 on Mon Feb  7 23:20:58 2011
*nat
:PREROUTING ACCEPT [145:12911]
:POSTROUTING ACCEPT [14:2141]
:OUTPUT ACCEPT [14:2141]
-A PREROUTING -s 192.168.10.0/24 -d 65.55.10.11/32 -p tcp -m tcp -m comment --comment "microsoft debugging symbol server: msdl.microsoft.com" -j ACCEPT 
-A PREROUTING -s 192.168.10.0/24 -p tcp -m tcp --dport 8800 -j REDIRECT --to-ports 80 
-A PREROUTING -s 192.168.10.0/24 -p tcp -m tcp --dport 8080 -j REDIRECT --to-ports 80 
-A PREROUTING -s 192.168.10.0/24 -p tcp -m tcp --dport 80 -j REDIRECT
-A PREROUTING -s 192.168.10.0/24 -p tcp -m tcp --dport 81 -j REDIRECT --to-ports 80 
-A PREROUTING -s 192.168.10.0/24 -p tcp -m tcp --dport 6666 -j REDIRECT
-A PREROUTING -s 192.168.10.0/24 -p tcp -m tcp --dport 443 -j REDIRECT
-A POSTROUTING -s 192.168.10.0/24 -d 65.55.10.11/32 -p tcp -m tcp -j MASQUERADE 
COMMIT
# Completed on Mon Feb  7 23:20:58 2011
# Generated by iptables-save v1.4.3.1 on Mon Feb  7 23:20:58 2011
*filter
:INPUT ACCEPT [216:25584]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [2361:1470538]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m conntrack --ctstate NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -d 65.55.10.11/32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 80 -j ACCEPT 
-A FORWARD -s 192.168.10.0/24 -d 65.55.10.11/32 -j ACCEPT 
-A FORWARD -s 192.168.10.0/24 -d 192.168.10.0/24 -j ACCEPT 
-A FORWARD -s 192.168.10.0/24 -d 192.168.10.0/24 -j ACCEPT 
-A FORWARD -j DROP
COMMIT
# Completed on Mon Feb  7 23:20:58 2011
